fix: windows打包问题修复