@@ -39,7 +39,7 @@ subprojects { project ->
     File vmArgs = file("$projectDir/${project.name}.modularity")
     if (vmArgs.exists()) {
         vmArgs.readLines().each {
-            if (!it.isBlank() && !it.startsWith("//")) {
+            if (!it.isBlank() && !it.startsWith("//") && !it.startsWith("--add-opens")) {
                 ext.compilerArgs.add(it)
             }
         }
